update:optimize code

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <img id="user-avatar" src="./icons/ic_48.png" alt="User Avatar" class="avatar" onerror="this.src='./icons/ic_48.png'">
+            <img id="user-avatar" src="./icons/ic_48.png" alt="User Avatar" class="avatar">
             <div class="user-info">
                 <h2 id="username">Loading...</h2>
                 <span id="user-status" class="status">Checking for changes...</span>
